--- a/templates/nginx_jekyll.tt
+++ b/templates/nginx_jekyll.tt
@@ -1,11 +1,11 @@
 server {
     listen   80;
     server_name <%= domain %> www.<%= domain %>;
-#    access_log /home/www/<%= domain %>/logs/access.log;
-#    error_log /home/www/<%= domain %>/logs/error.log;
+    access_log /home/<%= domain %>/log/access.log;
+    error_log /home/<%= domain %>/log/error.log;
 
     location / {
-        root   /home/www/<%= domain %>/git_repo/_site;
+        root   /home/<%= domain %>/git_repo/_site;
         index  index.html;
     }
 }
