--- a/templates/nginx_rackapp.tt
+++ b/templates/nginx_rackapp.tt
@@ -1,14 +1,14 @@
-upstream cpfcnpj {
-    server unix:/home/www/cpfcnpj.mhfs.com.br/current/tmp/sockets/unicorn.sock fail_timeout=0;
+upstream <%= domain %> {
+    server unix:/home/<%= domain %>/shared/tmp/sockets/unicorn.sock fail_timeout=0;
 }
 
 server {
     listen 80;
-    server_name cpfcnpj.mhfs.com.br;
-    access_log /home/www/cpfcnpj.mhfs.com.br/current/log/access.log;
-    error_log /home/www/cpfcnpj.mhfs.com.br/current/log/error.log;
+    server_name <%= domain %>;
+    access_log /home/<%= domain %>/shared/log/access.log;
+    error_log /home/<%= domain %>/shared/log/error.log;
 
-    root /home/www/cpfcnpj.mhfs.com/current/public;
+    root /home/<%= domain %>/current/public;
 
     location / {
       # an HTTP header important enough to have its own Wikipedia entry:
@@ -25,7 +25,7 @@ server {
 
       # Try to serve static files from nginx, no point in making an
       if (!-f $request_filename) {
-        proxy_pass http://cpfcnpj;
+        proxy_pass http://<%= domain %>;
         break;
       }
     }
@@ -34,7 +34,7 @@ server {
     # and add a far future expires header to it, making the browser
     # cache the resource and navigate faster over the website
     location ~ ^/(images|javascripts|stylesheets|flash)/  {
-      root /home/www/cpfcnpj.mhfs.com.br/current/public;
+      root /home/<%= domain %>/current/public;
       break;
     }
 
